name:          terminal
category:      System, Console, Terminfo, Win32
version:       0.1
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/terminal/
bug-reports:   http://github.com/ekmett/terminal/issues
copyright:     Copyright (C) 2013 Edward A. Kmett
synopsis:      A portable color console
description:   A portable color console
build-type:    Custom

extra-source-files:
  .ghci
  .gitignore
  .travis.yml
  .vim.custom
  CHANGELOG.markdown
  HLint.hs
  README.markdown
  travis/cabal-apt-install
  travis/config

flag terminfo
  description: Use terminfo on POSIX platforms
  default: True

source-repository head
  type: git
  location: git://github.com/ekmett/terminal.git

library
  build-depends:
    base >= 4.4 && < 5,
    lens >= 3.8

  if os(windows)
    build-depends: Win32 >=2.0
    cpp-options: -DWIN32
  else
    build-depends: unix >=2.0 && < 2.7
    cpp-options: -DUNIX

  if flag(terminfo)
    cpp-options: -DTERMINFO
    build-depends: terminfo >= 0.3.2 && < 0.4

  hs-source-dirs: src
  exposed-modules:
    System.Console.Terminal
    System.Console.Terminal.Color

  default-language: Haskell2010

  ghc-options: -Wall

test-suite doctests
  type:    exitcode-stdio-1.0
  main-is: doctests.hs
  default-language: Haskell2010
  build-depends:
    base,
    directory >= 1.0,
    doctest >= 0.9.1,
    filepath
  ghc-options: -Wall -threaded
  if impl(ghc<7.6.1)
    ghc-options: -Werror
  hs-source-dirs: tests
